# Plaka_Kanta-FDS

./: CMakeLists.txt
Plaka Kanta/: Form1.Designer.vb  Form1.resx  Form1.vb  Form2.Designer.vb  Form2.vb  Plaka Kanta.slnx  Plaka Kanta.vbproj
Plaka Kanta/My Project/: Application.Designer.vb  AssemblyInfo.vb  Resources.Designer.vb  Resources.resx  Settings.Designer.vb
sql/: db.sql
src/: Main.cpp
